WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250645
[SVG] Fixed invalid input values in lighting filters
https://bugs.webkit.org/show_bug.cgi?id=250645
Summary
[SVG] Fixed invalid input values in lighting filters
Ahmad Saleem
Reported
2023-01-15 06:42:40 PST
Hi Team, Aligning with Web-Spec -
https://drafts.fxtf.org/filter-effects/#element-attrdef-fespecularlighting-specularexponent
&
https://drafts.fxtf.org/filter-effects/#element-attrdef-fespotlight-specularexponent
- specularExponent = Range 1.0 to 128.0 - specularConstant = any non-negative number - diffuseConstant = any non-negative number Blink Commit -
https://src.chromium.org/viewvc/blink?view=revision&revision=169130
We can do 1-1 merge, just wanted to raise so we can track and do this later. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-22 06:43:17 PST
<
rdar://problem/104527452
>
EWS
Comment 2
2023-04-22 11:04:19 PDT
Committed
263279@main
(ffe7d732d4ee): <
https://commits.webkit.org/263279@main
> Reviewed commits have been landed. Closing PR #13064 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug